--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ header nav ul li a {
     text-decoration: none;
     color: black;
     font-weight: 400;
+    font-size: 20px;
 }
 
 header nav ul li a:hover {
@@ -57,14 +58,14 @@ header nav ul li a:hover {
 
 .hero {
     width: 100%;
-    height: calc(100vh - 80px);
+    height: 100vh;
     display: flex;
     justify-content: space-around;
 }
 
 .hero img {
     width: 500px;
-    height: calc(100vh - 85px);
+    height: 100vh;
 }
 
 .hero div {
@@ -95,22 +96,11 @@ header nav ul li a:hover {
     background-color: #ffd84e;
 }
 
-.img-absolute {
-    position: absolute;
-    width: 60%; 
-    height: 60%;
-    top: 90%;
-    right: 0;
-    left: 0;
-    margin: auto;
-    /* min-width: 440px;
-    min-height: 250px; */
 
-}
 
 .we {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     justify-content: end;
@@ -120,9 +110,9 @@ header nav ul li a:hover {
 .we div {
     display: grid;
     grid-template-columns: 1.5fr 1fr 1.5fr;
-    grid-template-rows: 0.5fr;
-    gap: 0px 0px;
+    grid-template-rows: 200px auto;
     grid-template-areas:
+        "img img img"
         "custom interface performance";
 }
 
@@ -131,8 +121,8 @@ header nav ul li a:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     height: 60vh;
-    padding: 50px;
 }
 
 .we div div img {
@@ -140,29 +130,45 @@ header nav ul li a:hover {
     height: 100px;
 }
 
+
 .we div div p {
     padding-top: 20px;
 }
 
-.we div:nth-child(1) {
+.img-absolute {
+    width: 700px; 
+    height: 400px;
+    position: relative;
+    bottom: 30%;
+}
+
+.we div:nth-child(1){
+    background-color: var(--beige);
+    grid-area: img;
+
+}
+
+.we div:nth-child(2) {
     background-color: var(--blue);
     grid-area: custom;
 }
 
-.we div:nth-child(2) {
+.we div:nth-child(3) {
     background-color: var(--yellow);
     grid-area: interface;
     text-align: center;
 }
 
-.we div:nth-child(3) {
+.we div:nth-child(4) {
     background-color: var(--orange);
     grid-area: performance;
 }
 
+
 .contact {
     width: 100%;
-    padding-top: 50px;
+    /* height: 100vh; */
+    padding-top: 20px;
     background-color: var(--beige);
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -174,6 +180,7 @@ header nav ul li a:hover {
 
 
 .contact>div {
+    padding: 20px;
     grid-area: text;
     display: flex;
     flex-direction: column;
@@ -264,6 +271,8 @@ footer {
 
 /**----MEDIA QUERIE-----*/
 
+
+
 @media screen and (max-width:1040px){
     .hero img {
         display:none;
@@ -273,77 +282,42 @@ footer {
         align-items: center;
         background-image: url("../img/jewelry.png");
         background-repeat: no-repeat;
+        background-size: contain;
     }
-    .img-absolute {
-        top: 90%;
+    .we div div p{
+        padding: 30px;
     }
 }
 
-@media screen and (max-width:894px){
-    .hero{
-        height: 100vh;
-    }
-    .we {
-        margin-top: 180px;
-    }
+@media screen and (max-width:900px){
     .we div {
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto auto;
+        grid-template-rows: 200px auto auto;
         grid-template-areas:
-            "custom interface"
-            "performance performance";
-    }
-    .we div div{
-        height: auto;
-    }
-    .img-absolute {
-        top: 95%;
+            "img img"
+            "performance interface"
+            "custom custom";
     }
 }
 
-@media screen and (max-width:756px){
-    .we {
-        margin-top: 180px;
+@media screen and (max-width:705px){
+    .we div {
+        grid-template-columns: 1fr;
+        grid-template-rows: 200px auto auto auto;
+        grid-template-areas:
+            "img"
+            "performance" 
+            "interface"
+            "custom";
     }
-    .img-absolute {
-        top: 85%;
-        width: 100%;
-    }
-    .hero div{
-        margin-bottom: 100px;
-    }
-}
-
-@media screen and (max-width:635px){
-    .img-absolute {
-        top: 85%;
+    .img-absolute{
+        width: 600px;
+        height: 350px;
+        bottom: 20%;
     }
 }
 
 @media screen and (max-width:658px){
-    .we {
-        margin-top: 180px;
-    }
-    .hero div{
-        height: 100vh;
-    }
-    
-    .we div div {
-        padding: 20px;
-    }
-
-    .we div {
-        grid-template-columns: 1fr;
-        grid-template-rows: 200px 200px 200px 200px;
-        grid-template-areas:
-            "img"
-            "custom"
-            "interface"
-            "performance";
-    }
-
-
-
     .contact {
         grid-template-columns: 1fr;
         grid-template-rows: auto auto;
@@ -351,13 +325,26 @@ footer {
             "text" 
             "form";
     }
-
-    .img-absolute {
-        grid-area: img;
-        width: 100%;
-    }
 }
 
+@media screen and (max-width:557px){
+    .img-absolute{
+        width: 100%;
+        bottom: 20%;
+    }
+    .hero div {
+        width: 100%;
+        align-items: center;
+        background-image: url("../img/jewelry.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
+@media screen and (max-width:529px){
+    .img-absolute{
+        height: 400px;
+    }
+}
 @media screen and (max-width:480px){
     .hero div h1{
         text-align: center;
@@ -367,25 +354,7 @@ footer {
         text-align: center;
     }
     .we div {
-        grid-template-rows: 140px 230px 200px 230px;
-    }
-    .we div div {
-        padding:5px;
-    }
-    .we div div img {
-        width: 80px;
-        height: 80px;
-    }
-    .img-absolute {
-        width: 100%;
-        top:82%;
-    }
-}
-
-@media screen and (max-width: 445px){
-    .img-absolute {
-        width: 100%;
-        top:82%;
+        grid-template-rows: 150px auto auto auto;
     }
 }
 
