--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ header nav ul li a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 60vh;
+    height: 300px;
 }
 
 .we div div img {
